# tablericons

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  download_tabler_icons.py  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: main.yml  update-tabler-icons.yml
requirements/: compile.py  py310-django52.txt  py311-django52.txt  py312-django52.txt  py312-django60.txt  py313-django52.txt  py313-django60.txt  py314-django52.txt  py314-django60.txt
src/tablericons/: __init__.py  _compat.py  jinja.py
src/tablericons/templatetags/: tablericons.py
tests/: test_django.py  test_jinja.py  test_tablericons.py
