[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "tablericons2"
version = "1.0.0"
description = "Use Tabler Icons in your Django and Jinja templates."
readme = "README.md"
keywords = [
  "Django",
]
license = { text = "MIT" }
authors = [
  { name = "Francisco Macedo", email = "me@fmacedo.com" },
  { name = "Julian Wachholz", email = "jw@continis.ch" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
optional-dependencies.django = [
  "django>=5.2",
]
optional-dependencies.jinja = [
  "jinja2>=2.8",
]
urls.Changelog = "https://github.com/continis/tablericons/blob/main/CHANGELOG.md"
urls.Repository = "https://github.com/continis/tablericons"

[tool.isort]
profile = "black"
force_single_line = true
add_imports = [
  "from __future__ import annotations",
]

[tool.mypy]
mypy_path = "src/"
namespace_packages = false
warn_unreachable = true
strict = true
overrides = [ { module = "tests.*", allow_untyped_defs = true } ]
show_error_codes = true

[tool.pytest]
ini_options.addopts = """\
    --strict-config
    --strict-markers
    """

[tool.coverage]
run.branch = true
run.parallel = true
run.source = [
  "tablericons",
  "tests",
]
paths.source = [
  "src",
  ".tox/**/site-packages",
]
report.show_missing = true

[tool.rstcheck]
report_level = "ERROR"
